syntax = "proto3";

option csharp_namespace = "Citadels.Api";

package citadels;

service Citadels {

  rpc StartNewGame (NewGameRequest) returns (NewGameResponse);
  rpc StartDraft (StartDraftRequest) returns (DraftStateResponse);
  rpc ChooseCharacter (ChooseCharacterRequest) returns (DraftStateResponse);
}

message NewGameRequest {
	string game_id = 1;
	repeated string player_names = 2;
}
message NewGameResponse {
	string id = 1;
}
message StartDraftRequest {
	string game_id = 1;
}
message ChooseCharacterRequest {
	string game_id = 1;
	int32 rank = 2;
}
message DraftStateResponse {
	bool in_progress = 1;
	string player_name = 2;
	repeated int32 available_ranks = 3;
	repeated int32 discarded_ranks = 4;
}


